--- a/src/main/resources/templates/fragment/cmmn.html
+++ b/src/main/resources/templates/fragment/cmmn.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" th:src="@{/js/lib/jquery.mtz.monthpicker.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery.popupoverlay.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/jquery.placeholder.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/lib/vue.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/vue.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/vue-the-mask/vue-the-mask.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/es6-promise/es6-promise.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/es6-promise/es6-promise.auto.min.js}"></script>
