--- a/src/main/resources/templates/page/shop-manage.html
+++ b/src/main/resources/templates/page/shop-manage.html
@@ -387,10 +387,12 @@
                 },
                 uploadImageCB: function(data) {
                     if (this.uploadTgtNm === 'bnRegCard') {
-                        this.oldImageList.push(this.shopInfo.bnRegCard)
-                        this.shopInfo.bnRegCard = data.filNm
-                        this.shopInfo.cardChkYn = 'N'
-                        $("#bnRegCard")[0].value = ''
+                        if (confirm('사업자 등록증 변경 후 로그아웃 시\n등록증 재심사 후 로그인이 가능합니다.\n(평일(공휴일 제외) 24시간 이내 완료)\n사업자 등록증을 변경하시겠습니까?')) {
+                            this.oldImageList.push(this.shopInfo.bnRegCard)
+                            this.shopInfo.bnRegCard = data.filNm
+                            this.shopInfo.cardChkYn = 'N'
+                            $("#bnRegCard")[0].value = ''
+                        }
                     }
                     if (this.uploadTgtNm === 'bnImg') {
                         this.oldImageList.push(this.shopInfo.bnImg)
